Added lamentation to master branch

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>We're learning to branch git</h2>
-    
+    Nobody nose the troubles I've seen on master branch
     
 </body>
 </html>
