Added prayer to master

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h2>We're learning to branch git</h2>
     Nobody nose the troubles I've seen on master branch
     Yeow yewo asa asha
+
+    <h1>Hello aleluya 3:44pm</h1>
 </body>
 </html>
