Katie animation with transition and transform:translate

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BitWilder Tech</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h2>We're learning to branch git</h2>
@@ -12,5 +13,13 @@
     Yeow yewo asa asha
 
     <h1>Hello aleluya 3:44pm</h1>
+
+    <div class="container">
+        <div class="box">
+            <h1>Katie</h1>
+        </div>
+        <div class="box-2"><h2>Wollop</h2></div>
+    </div>
+
 </body>
 </html>
