Initial commit: Formatting webpage layout

--- a/index.html
+++ b/index.html
@@ -4,22 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BitWilder Tech</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Responsive Website</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h2>We're learning to branch git</h2>
-    Nobody nose the troubles I've seen on master branch
-    Yeow yewo asa asha
+    <header>
+        <h1 class="logo">HippieChick Noms</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a>
+                    <a href="#">About</a>
+                    <a href="#">Connect</a>
+                    <a href="#">Products</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <h1>Hello aleluya 3:44pm</h1>
-
-    <div class="container">
-        <div class="box">
-            <h1>Katie</h1>
-        </div>
-        <div class="box-2"><h2>Wollop</h2></div>
-    </div>
+    <main>
+        <section class="intro">
+            <h2 class="section-title">We are Northern Ohio's first <span>Oil-Free</span> and <span>Sugar-Free</span> granola company</h2>
+        </section>
+        <section class="about-us">
+            <header class="about-us__intro">
+                <h2 class="section-title">
+                    <div class="about-us__body">
+                        <p></p>
+                        <p></p>
+                    </div>
+                </h2>
+            </header>
+        </section>
+        <section class="order-online">
+            <header>
+                <h2 class="section-title"></h2>
+            </header>
+            <p></p>
+            <div class="btn-group">
+                <a href="#" class="btn btn-primary"></a>
+                <a href="#" class="btn btn-primary"></a>
+                <a href="#" class="btn btn-primary"></a>
+            </div>
+        </section>
+    </main>
 
 </body>
 </html>
