Finished developing the layout

--- a/index.html
+++ b/index.html
@@ -45,7 +45,58 @@
                 <a href="#" class="btn btn-primary"></a>
             </div>
         </section>
-    </main>
+        <section class="product-showcase">
+            <header>
+                <h2 class="section-title"></h2>
+            </header>
+            <div class="products">
+                <div class="product">
+                    <h3></h3>
+                    <img src="" alt="" class="product__img">
+                    <p></p>
+                    <p></p>
+                </div>
+                <div class="product">
+                    <h3></h3>
+                    <img src="" alt="" class="product__img">
+                    <p></p>
+                    <p></p>
+                </div>
+                <div class="product">
+                    <h3></h3>
+                    <img src="" alt="" class="product__img">
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+        </section>
 
+        <div class="btn-group">
+            <a href="" class="btn btn-accent"></a>
+        </div>
+        <div class="btn-group">
+            <a href="#" class="btn btn-primary"></a>
+            <a href="#" class="btn btn-primary"></a>
+            <a href="#" class="btn btn-primary"></a>
+        </div>
+
+        <footer>
+            <ul class="footer-nav">
+                <li><a href="#">Home</a>
+                    <a href="#">About</a>
+                    <a href="#">Connect</a>
+                    <a href="#">Products</a></li>
+            </ul>
+
+            <ul class="footer-social">
+                <li><a href="#">Home</a>
+                    <a href="#">About</a>
+                    <a href="#">Connect</a>
+                    <a href="#">Products</a></li>
+            </ul>
+
+        </footer>
+
+    </main>
 </body>
 </html>
