Added basic general styling to images and typography. Started mobile-first.

--- a/index.html
+++ b/index.html
@@ -4,45 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Website</title>
+    <title>TechBomba</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <h1 class="logo">HippieChick Noms</h1>
+        <h1 class="logo">TechBomba</h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a>
+                <li>
+                    <a href="#">Home</a>
                     <a href="#">About</a>
                     <a href="#">Connect</a>
-                    <a href="#">Products</a></li>
+                    <a href="#">Products</a>
+                </li>
             </ul>
         </nav>
     </header>
 
     <main>
+        <section class="hero">
+            <h2 class="section-title">We've Got Your Back</h2>
+        </section>
         <section class="intro">
-            <h2 class="section-title">We are Northern Ohio's first <span>Oil-Free</span> and <span>Sugar-Free</span> granola company</h2>
+            <h2 class="section-title">We are Kenya's <span>beloved</span> and <span>most trusted</span> tech solutions company</h2>
         </section>
         <section class="about-us">
             <header class="about-us__intro">
                 <h2 class="section-title">
                     <div class="about-us__body">
-                        <p></p>
-                        <p></p>
+                        <p>TechBomba</p>
+                        <p>We've got your back.</p>
                     </div>
                 </h2>
             </header>
         </section>
         <section class="order-online">
             <header>
-                <h2 class="section-title"></h2>
+                <h2 class="section-title">Let's Get Started</h2>
             </header>
             <p></p>
             <div class="btn-group">
-                <a href="#" class="btn btn-primary"></a>
-                <a href="#" class="btn btn-primary"></a>
-                <a href="#" class="btn btn-primary"></a>
+                <a href="#" class="btn btn-primary">CCTV Installation</a>
+                <a href="#" class="btn btn-primary">Computer Networking</a>
+                <a href="#" class="btn btn-primary">Web Development and Hosting</a>
             </div>
         </section>
         <section class="product-showcase">
@@ -51,48 +56,52 @@
             </header>
             <div class="products">
                 <div class="product">
-                    <h3></h3>
-                    <img src="" alt="" class="product__img">
-                    <p></p>
-                    <p></p>
+                    <h3>CCTV Installation</h3>
+                    <img src="images/camera-cyber.jpg" alt="cctv-installation" class="product__img">
+                    <p>Get The Best Products</p>
+                    <p>For the right price. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur iste obcaecati optio odit voluptates et molestiae amet atque illum magni nostrum ex iure quidem vel, qui ipsam. Maiores sapiente commodi quaerat architecto explicabo neque atque ipsa, ullam facilis libero veniam iusto doloribus quasi repudiandae reprehenderit, a vitae voluptates aliquid, incidunt nemo consectetur autem deleniti laborum? Dolorum facere eligendi magni obcaecati excepturi placeat impedit, vitae, sapiente quae sed distinctio corrupti nobis recusandae eveniet, nemo dolor. Esse et velit corporis commodi ab eos quaerat placeat doloribus, laborum, animi delectus aliquid tenetur impedit nam! Magnam delectus veniam fugit, repellendus natus quia quo pariatur.</p>
                 </div>
                 <div class="product">
-                    <h3></h3>
-                    <img src="" alt="" class="product__img">
-                    <p></p>
-                    <p></p>
+                    <h3>Computer Networking</h3>
+                    <img src="images/networking.jpg" alt="networking-job" class="product__img">
+                    <p>Get Your Internet Connection</p>
+                    <p>Right where you need it. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit consectetur, quae possimus animi, quam maxime necessitatibus nesciunt officiis, dolores ducimus facilis magni aut sit saepe? Laudantium voluptatem, praesentium maxime optio inventore, placeat similique velit error, aliquam repudiandae alias fuga quaerat natus beatae ut sint a tempora? Accusamus vel veritatis aut!</p>
                 </div>
                 <div class="product">
-                    <h3></h3>
-                    <img src="" alt="" class="product__img">
-                    <p></p>
-                    <p></p>
+                    <h3>Web Development and Hosting</h3>
+                    <img src="images/coding.png" alt="website-image" class="product__img">
+                    <p>Get Your Message Out</p>
+                    <p>To a global audience. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi amet, placeat odit doloremque hic corporis eos voluptates! Alias perferendis aut voluptate minima, non ipsum magni fuga, voluptatem nam natus velit illo itaque dolores repudiandae minus eum odit accusamus obcaecati, nisi nesciunt tenetur commodi sit voluptatum distinctio. Accusamus voluptates voluptatibus distinctio! Facilis quis suscipit quas dolorem asperiores ratione vel enim, esse harum blanditiis a in velit natus adipisci perferendis placeat quaerat.</p>
                 </div>
             </div>
         </section>
 
         <div class="btn-group">
-            <a href="" class="btn btn-accent"></a>
+            <a href="" class="btn btn-accent">Talk To Us</a>
         </div>
         <div class="btn-group">
-            <a href="#" class="btn btn-primary"></a>
-            <a href="#" class="btn btn-primary"></a>
-            <a href="#" class="btn btn-primary"></a>
+            <a href="#" class="btn btn-primary">CCTV</a>
+            <a href="#" class="btn btn-primary">Networking</a>
+            <a href="#" class="btn btn-primary">Web Development</a>
         </div>
 
         <footer>
             <ul class="footer-nav">
-                <li><a href="#">Home</a>
+                <li>
+                    <a href="#">Home</a>
                     <a href="#">About</a>
                     <a href="#">Connect</a>
-                    <a href="#">Products</a></li>
+                    <a href="#">Products</a>
+                </li>
             </ul>
 
             <ul class="footer-social">
-                <li><a href="#">Home</a>
+                <li>
+                    <a href="#">Home</a>
                     <a href="#">About</a>
                     <a href="#">Connect</a>
-                    <a href="#">Products</a></li>
+                    <a href="#">Products</a>
+                </li>
             </ul>
 
         </footer>
