--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 </head>
 <body>
     <header>
-        <h1 class="logo">TechBomba</h1>
+        <h1 class="logo">
+            <a href="index.html">TechBomba</a>
+        </h1>
         <nav>
             <ul>
-                <li>
-                    <a href="#">Home</a>
-                    <a href="#">About</a>
-                    <a href="#">Connect</a>
-                    <a href="#">Products</a>
-                </li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Connect</a></li>
+                <li><a href="#">Products</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section class="hero">
-            <h2 class="section-title">We've Got Your Back</h2>
+            <h2 class="section-title">Relax.<br> We've Got Your Back.</h2>
         </section>
         <section class="intro">
             <h2 class="section-title">We are Kenya's <span>beloved</span> and <span>most trusted</span> tech solutions company</h2>
@@ -87,21 +87,17 @@
 
         <footer>
             <ul class="footer-nav">
-                <li>
-                    <a href="#">Home</a>
-                    <a href="#">About</a>
-                    <a href="#">Connect</a>
-                    <a href="#">Products</a>
-                </li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Connect</a></li>
+                <li><a href="#">Products</a></li>
             </ul>
 
             <ul class="footer-social">
-                <li>
-                    <a href="#">Home</a>
-                    <a href="#">About</a>
-                    <a href="#">Connect</a>
-                    <a href="#">Products</a>
-                </li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Connect</a></li>
+                <li><a href="#">Products</a></li>
             </ul>
 
         </footer>
