Added styling to hero and about-us sections

--- a/index.html
+++ b/index.html
@@ -27,17 +27,18 @@
             <h2 class="section-title">Relax.<br> We've Got Your Back.</h2>
         </section>
         <section class="intro">
-            <h2 class="section-title">We are Kenya's <span>beloved</span> and <span>most trusted</span> tech solutions company</h2>
+            <h2 class="section-title">We are Kenya's <span class="text-primary">beloved</span> and <span  class="text-primary">best trusted</span> tech solutions company</h2>
         </section>
         <section class="about-us">
             <header class="about-us__intro">
-                <h2 class="section-title">
-                    <div class="about-us__body">
-                        <p>TechBomba</p>
-                        <p>We've got your back.</p>
-                    </div>
+                <h2 class="section-title-small">
+                    <small>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt facere dolor doloribus vitae voluptas, non pariatur itaque id consequatur sit.</small>
                 </h2>
             </header>
+            <div class="about-us__body">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ad sed dolore. Illum, repudiandae quos. Est corporis suscipit aliquam sequi?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id praesentium dolorem laudantium laborum quasi architecto?</p>
+            </div>
         </section>
         <section class="order-online">
             <header>
