--- a/index.html
+++ b/index.html
@@ -27,33 +27,33 @@
             <h2 class="section-title">Relax.<br> We've Got Your Back.</h2>
         </section>
         <section class="intro">
-            <h2 class="section-title">We are Kenya's <span class="text-primary">beloved</span> and <span  class="text-primary">best trusted</span> tech solutions company</h2>
+            <h2 class="section-title">We are Kenya's <span class="text-primary">beloved</span> and <span  class="text-primary">most trusted</span> tech solutions company</h2>
         </section>
         <section class="about-us">
             <header class="about-us__intro">
                 <h2 class="section-title-small">
-                    <small>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt facere dolor doloribus vitae voluptas, non pariatur itaque id consequatur sit.</small>
+                    <small>Small Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt facere dolor doloribus vitae voluptas, non pariatur itaque id consequatur sit.</small>
                 </h2>
             </header>
             <div class="about-us__body">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ad sed dolore. Illum, repudiandae quos. Est corporis suscipit aliquam sequi?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id praesentium dolorem laudantium laborum quasi architecto?</p>
+                <p>Body1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ad sed dolore. Illum, repudiandae quos. Est corporis suscipit aliquam sequi?</p>
+                <p>Body2 Lorem ipsum dolor sit amet consectetur adipisicing elit. Id praesentium dolorem laudantium laborum quasi architecto?</p>
             </div>
         </section>
         <section class="order-online">
             <header>
-                <h2 class="section-title">Let's Get Started</h2>
+                <h2 class="section-title text-primary">Order Online</h2>
             </header>
             <p></p>
             <div class="btn-group">
-                <a href="#" class="btn btn-primary">CCTV Installation</a>
-                <a href="#" class="btn btn-primary">Computer Networking</a>
-                <a href="#" class="btn btn-primary">Web Development and Hosting</a>
+                <a href="#" class="btn btn-primary">Email</a>
+                <a href="#" class="btn btn-primary">Facebook</a>
+                <a href="#" class="btn btn-primary">Instagram</a>
             </div>
         </section>
         <section class="product-showcase">
             <header>
-                <h2 class="section-title"></h2>
+                <h2 class="section-title text-primary">Some of Our Products</h2>
             </header>
             <div class="products">
                 <div class="product">
