--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h2 class="section-title">Relax.<br> We've Got Your Back.</h2>
         </section>
         <section class="intro">
-            <h2 class="section-title">We are Kenya's <span class="text-primary">beloved</span> and <span  class="text-primary">most trusted</span> tech solutions company</h2>
+            <h2 class="section-title">We are Kenya's <span class="text-primary">beloved</span> and <span  class="text-primary">most trusted</span> tech solutions company.</h2>
         </section>
         <section class="about-us">
             <header class="about-us__intro">
@@ -42,48 +42,54 @@
         </section>
         <section class="order-online">
             <header>
-                <h2 class="section-title text-primary">Order Online</h2>
+                <h2 class="section-title text-primary">Connect with Us</h2>
             </header>
-            <p></p>
+            <p>Say hi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo recusandae maiores expedita et ipsam rem minus ipsum assumenda voluptatum accusamus culpa, provident ex similique laudantium, architecto atque tempore, dicta eaque illum hic. Hic, quaerat tempora.</p>
             <div class="btn-group">
                 <a href="#" class="btn btn-primary">Email</a>
                 <a href="#" class="btn btn-primary">Facebook</a>
                 <a href="#" class="btn btn-primary">Instagram</a>
             </div>
         </section>
-        <section class="product-showcase">
+        <section class="service-showcase">
             <header>
-                <h2 class="section-title text-primary">Some of Our Products</h2>
+                <h2 class="section-title text-primary">Some of Our Services</h2>
             </header>
-            <div class="products">
-                <div class="product">
-                    <h3>CCTV Installation</h3>
+            <div class="services">
+                <div class="service">
                     <img src="images/camera-cyber.jpg" alt="cctv-installation" class="product__img">
-                    <p>Get The Best Products</p>
-                    <p>For the right price. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur iste obcaecati optio odit voluptates et molestiae amet atque illum magni nostrum ex iure quidem vel, qui ipsam. Maiores sapiente commodi quaerat architecto explicabo neque atque ipsa, ullam facilis libero veniam iusto doloribus quasi repudiandae reprehenderit, a vitae voluptates aliquid, incidunt nemo consectetur autem deleniti laborum? Dolorum facere eligendi magni obcaecati excepturi placeat impedit, vitae, sapiente quae sed distinctio corrupti nobis recusandae eveniet, nemo dolor. Esse et velit corporis commodi ab eos quaerat placeat doloribus, laborum, animi delectus aliquid tenetur impedit nam! Magnam delectus veniam fugit, repellendus natus quia quo pariatur.</p>
+                    <div class="service__content">
+                        <h3 class="service__title">CCTV Installation</h3>
+                        <p>Secure your turf with state-of-the-art surveillance equipment. We have partnered with a wide range of brands including Hikvision, Dahua and Hilook to provide you with quality service at the right price.</p>
+                        <p class="fineprint">Some caption</p>
+                    </div>
                 </div>
-                <div class="product">
-                    <h3>Computer Networking</h3>
+                <div class="service">
                     <img src="images/networking.jpg" alt="networking-job" class="product__img">
-                    <p>Get Your Internet Connection</p>
-                    <p>Right where you need it. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit consectetur, quae possimus animi, quam maxime necessitatibus nesciunt officiis, dolores ducimus facilis magni aut sit saepe? Laudantium voluptatem, praesentium maxime optio inventore, placeat similique velit error, aliquam repudiandae alias fuga quaerat natus beatae ut sint a tempora? Accusamus vel veritatis aut!</p>
+                    <div class="service__content">
+                        <h3 class="service__title">Computer Networking</h3>
+                        <p>We handle a whole range of services from structured cabling to routing and switching and wired and wireless access point connection installation and support.</p>
+                        <p class="fineprint">Some caption</p>
+                    </div>
                 </div>
-                <div class="product">
-                    <h3>Web Development and Hosting</h3>
+                <div class="service">
                     <img src="images/coding.png" alt="website-image" class="product__img">
-                    <p>Get Your Message Out</p>
-                    <p>To a global audience. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi amet, placeat odit doloremque hic corporis eos voluptates! Alias perferendis aut voluptate minima, non ipsum magni fuga, voluptatem nam natus velit illo itaque dolores repudiandae minus eum odit accusamus obcaecati, nisi nesciunt tenetur commodi sit voluptatum distinctio. Accusamus voluptates voluptatibus distinctio! Facilis quis suscipit quas dolorem asperiores ratione vel enim, esse harum blanditiis a in velit natus adipisci perferendis placeat quaerat.</p>
+                    <div class="service__content">
+                        <h3 class="service__title">Web Development and Hosting</h3>
+                        <p>We build amazing websites and provide hosting with 99% uptime guarenteed so that you can say what you need to say consistently and in style.</p>
+                        <p class="fineprint">Some caption</p>
+                    </div>
                 </div>
             </div>
         </section>
 
         <div class="btn-group">
-            <a href="" class="btn btn-accent">Talk To Us</a>
+            <a href="#" class="btn btn-accent">Talk To Us</a>
         </div>
         <div class="btn-group">
-            <a href="#" class="btn btn-primary">CCTV</a>
-            <a href="#" class="btn btn-primary">Networking</a>
-            <a href="#" class="btn btn-primary">Web Development</a>
+            <a href="#" class="btn btn-primary">Email</a>
+            <a href="#" class="btn btn-primary">Facebook</a>
+            <a href="#" class="btn btn-primary">Instagram</a>
         </div>
 
         <footer>
