--- a/index.html
+++ b/index.html
@@ -84,9 +84,10 @@
         </section>
 
         <div class="btn-group">
-            <a href="#" class="btn btn-accent">Talk To Us</a>
+            <a href="#" class="btn btn-accent">See All Our Services</a>
         </div>
         <div class="btn-group">
+            <p class="mb-0">or order over one of the following platforms:</p>
             <a href="#" class="btn btn-primary">Email</a>
             <a href="#" class="btn btn-primary">Facebook</a>
             <a href="#" class="btn btn-primary">Instagram</a>
