Done with general styling for mobile version

--- a/index.html
+++ b/index.html
@@ -92,24 +92,23 @@
             <a href="#" class="btn btn-primary">Facebook</a>
             <a href="#" class="btn btn-primary">Instagram</a>
         </div>
-
-        <footer>
-            <ul class="footer-nav">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Connect</a></li>
-                <li><a href="#">Products</a></li>
-            </ul>
-
-            <ul class="footer-social">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Connect</a></li>
-                <li><a href="#">Products</a></li>
-            </ul>
-
-        </footer>
-
     </main>
+
+    <footer>
+        <ul class="footer-nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Connect</a></li>
+            <li><a href="#">Products</a></li>
+        </ul>
+
+        <ul class="footer-social">
+            <li><a class="social-link" href="#"><img class="social-icon" src="images/socials/icons8-facebook-50.png" aria-label="Facebook"></a></li>
+            <li><a class="social-link" href="#"><img class="social-icon" src="images/socials/icons8-instagram.svg" aria-label="Instagram"></a></li>
+            <li><a class="social-link" href="#"><img class="social-icon" src="images/socials/icons8-twitter.svg" aria-label="Twitter"></a></li>
+            <li><a class="social-link" href="#"><img class="social-icon" src="images/socials/icons8-youtube-squared.svg" aria-label="YouTube"></a></li>
+        </ul>
+
+    </footer>
 </body>
 </html>
