Edited footer styling and swapped around bg-images

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
                     </div>
                 </div>
                 <div class="service">
-                    <img src="images/coding.png" alt="website-image" class="product__img">
+                    <img src="images/web-dev.jpg" alt="website-image" class="product__img">
                     <div class="service__content">
                         <h3 class="service__title">Web Development and Hosting</h3>
-                        <p>We build amazing websites and provide hosting with 99% uptime guarenteed so that you can say what you need to say consistently and in style.</p>
+                        <p>We build amazing mobile-responsive websites and provide hosting with 99% uptime guarenteed so that you can say what you need to say consistently and in style.</p>
                         <p class="fineprint">Some caption</p>
                     </div>
                 </div>
@@ -103,10 +103,10 @@
         </ul>
 
         <ul class="footer-social">
-            <li><a class="social-link" href="#"><img class="social-icon" src="images/socials/icons8-facebook-50.png" aria-label="Facebook"></a></li>
-            <li><a class="social-link" href="#"><img class="social-icon" src="images/socials/icons8-instagram.svg" aria-label="Instagram"></a></li>
-            <li><a class="social-link" href="#"><img class="social-icon" src="images/socials/icons8-twitter.svg" aria-label="Twitter"></a></li>
-            <li><a class="social-link" href="#"><img class="social-icon" src="images/socials/icons8-youtube-squared.svg" aria-label="YouTube"></a></li>
+            <li><a class="social-link" href="#"><img class="social-icon" src="images/socials/icons8-facebook-50 white.png" aria-label="Facebook"></a></li>
+            <li><a class="social-link" href="#"><img class="social-icon" src="images/socials/icons8-instagram-50 white.png" aria-label="Instagram"></a></li>
+            <li><a class="social-link" href="#"><img class="social-icon" src="images/socials/icons8-twitter-50 white.png" aria-label="Twitter"></a></li>
+            <li><a class="social-link" href="#"><img class="social-icon" src="images/socials/icons8-youtube-squared-50 white.png" aria-label="YouTube"></a></li>
         </ul>
 
     </footer>
