In media queries, started styling for a min-width of 750px. Styled services, connect-with-us, hero and about-us sections

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <img src="images/networking.jpg" alt="networking-job" class="product__img">
                     <div class="service__content">
                         <h3 class="service__title">Computer Networking</h3>
-                        <p>We handle a whole range of services from structured cabling to routing and switching and wired and wireless access point connection installation and support.</p>
+                        <p>We handle a whole range of networking services from structured cabling to routing and switching and wired and wireless access point connection installation and support.</p>
                         <p class="fineprint">Some caption</p>
                     </div>
                 </div>
