Done with layout-design for TechBomba index page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <p>Body2 Lorem ipsum dolor sit amet consectetur adipisicing elit. Id praesentium dolorem laudantium laborum quasi architecto?</p>
             </div>
         </section>
-        <section class="order-online">
+        <section class="connect-with-us">
             <header>
                 <h2 class="section-title text-primary">Connect with Us</h2>
             </header>
@@ -86,8 +86,8 @@
         <div class="btn-group">
             <a href="#" class="btn btn-accent">See All Our Services</a>
         </div>
+        <p class="mb-0">or order on one of the following platforms:</p>
         <div class="btn-group">
-            <p class="mb-0">or order over one of the following platforms:</p>
             <a href="#" class="btn btn-primary">Email</a>
             <a href="#" class="btn btn-primary">Facebook</a>
             <a href="#" class="btn btn-primary">Instagram</a>
