--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Who We Are</a></li>
                 <li><a href="#">Connect</a></li>
-                <li><a href="#">Products</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section class="hero">
-            <h2 class="section-title">Relax.<br> We've Got Your Back.</h2>
+            <h2 class="section-title">Providing Tech Solutions<br> For the New Age</h2>
         </section>
         <section class="intro">
             <h2 class="section-title">We are Kenya's <span class="text-primary">beloved</span> and <span  class="text-primary">most trusted</span> tech solutions company.</h2>
@@ -67,7 +67,7 @@
                 <div class="service">
                     <img src="images/networking.jpg" alt="networking-job" class="product__img">
                     <div class="service__content">
-                        <h3 class="service__title">Computer Networking</h3>
+                        <h3 class="service__title">Structured Cabling and Networking</h3>
                         <p>We handle a whole range of networking services from structured cabling to routing and switching and wired and wireless access point connection installation and support.</p>
                         <p class="fineprint">Some caption</p>
                     </div>
@@ -86,7 +86,7 @@
         <div class="btn-group">
             <a href="#" class="btn btn-accent">See All Our Services</a>
         </div>
-        <p class="mb-0">or order on one of the following platforms:</p>
+        <p class="mb-0">or reach out to us on any of the following platforms:</p>
         <div class="btn-group">
             <a href="#" class="btn btn-primary">Email</a>
             <a href="#" class="btn btn-primary">Facebook</a>
@@ -97,9 +97,9 @@
     <footer>
         <ul class="footer-nav">
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Who We Are</a></li>
             <li><a href="#">Connect</a></li>
-            <li><a href="#">Products</a></li>
         </ul>
 
         <ul class="footer-social">
