--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         </h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Who We Are</a></li>
-                <li><a href="#">Connect</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="who-we-are.html">Who We Are</a></li>
+                <li><a href="contact.html">Connect</a></li>
             </ul>
         </nav>
     </header>
