Updated some page content

--- a/who-we-are.html
+++ b/who-we-are.html
@@ -27,12 +27,12 @@
             <h2 class="section-title">WHO WE ARE</h2>
         </section>
         <section class="intro">
-            <h2 class="section-title">We are Kenya's <span class="text-primary">beloved</span> and <span  class="text-primary">most trusted</span> tech solutions company.</h2>
+            <h2 class="section-title">Kenya's <span  class="text-primary">most trusted</span> tech solutions company.</h2>
         </section>
         <section class="about-us">
             <header class="about-us__intro">
                 <h2 class="section-title-small">
-                    <small>Our purpose is to handle the technological complexities for our clients so that they can focus on what really matters to them - serving theirs.</small>
+                    <small>Our purpose is to handle the technical complexities for our clients so that they can focus on handling complexities for theirs'.</small>
                 </h2>
             </header>
             <div class="about-us__body">
@@ -49,7 +49,7 @@
                 <div class="service">
                     <img src="images/the-man.jpg" alt="website-image" class="product__img">
                     <div class="service__content">
-                        <h3 class="service__title">Kepha Moturi</h3>
+                        <h3 class="service__title">Kepha Ototo</h3>
                         <p class="fineprint">C.E.O</p>
                     </div>
                 </div>
