--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h2 class="section-title">Providing Tech Solutions<br> For the New Age</h2>
         </section>
         <section class="intro">
-            <h2 class="section-title">We are Kenya's <span class="text-primary">beloved</span> and <span  class="text-primary">most trusted</span> tech solutions company.</h2>
+            <h2 class="section-title">We are Kenya's <span  class="text-primary">most trusted</span> tech solutions company.</h2>
         </section>
         <section class="about-us">
             <header class="about-us__intro">
